# running-slip-reader

./: .pre-commit-config.yaml  .releaserc.json  Makefile  README.md  pyproject.toml
running_slip_reader/: config.py  main.py
running_slip_reader/notebooks/: 01_poc.ipynb
